[gd_scene format=3 uid="uid://dtcw6bc0fitj"]

[ext_resource type="Script" uid="uid://byydsj5eyoc42" path="res://scripts/character_body_2d.gd" id="1_ij6vw"]
[ext_resource type="Texture2D" uid="uid://cgwrtuuom703m" path="res://people/scuba-stu-pack-lrg-removebg-preview.png" id="2_g2brh"]
[ext_resource type="Script" uid="uid://b0dmwaod6ubp4" path="res://scenes/playeranimation.gd" id="3_dn4c7"]

[sub_resource type="AtlasTexture" id="AtlasTexture_idle0"]
atlas = ExtResource("2_g2brh")
region = Rect2(0, 0, 31, 73)

[sub_resource type="AtlasTexture" id="AtlasTexture_swim0"]
atlas = ExtResource("2_g2brh")
region = Rect2(0, 0, 31, 73)

[sub_resource type="AtlasTexture" id="AtlasTexture_swim1"]
atlas = ExtResource("2_g2brh")
region = Rect2(31, 0, 31, 73)

[sub_resource type="AtlasTexture" id="AtlasTexture_swim2"]
atlas = ExtResource("2_g2brh")
region = Rect2(62, 0, 31, 73)

[sub_resource type="AtlasTexture" id="AtlasTexture_swim3"]
atlas = ExtResource("2_g2brh")
region = Rect2(93, 0, 31, 73)

[sub_resource type="AtlasTexture" id="AtlasTexture_swim4"]
atlas = ExtResource("2_g2brh")
region = Rect2(124, 0, 31, 73)

[sub_resource type="AtlasTexture" id="AtlasTexture_swim5"]
atlas = ExtResource("2_g2brh")
region = Rect2(155, 0, 31, 73)

[sub_resource type="AtlasTexture" id="AtlasTexture_swim6"]
atlas = ExtResource("2_g2brh")
region = Rect2(186, 0, 31, 73)

[sub_resource type="AtlasTexture" id="AtlasTexture_swim7"]
atlas = ExtResource("2_g2brh")
region = Rect2(217, 0, 31, 73)

[sub_resource type="SpriteFrames" id="SpriteFrames_t53lx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_idle0")
}],
"loop": true,
"name": &"idle",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_swim0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_swim1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_swim2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_swim3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_swim4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_swim5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_swim6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_swim7")
}],
"loop": true,
"name": &"swim",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g2brh"]
size = Vector2(25.460073, 66.243355)

[sub_resource type="Animation" id="Animation_pickup"]
resource_name = "pickup"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WeaponSprite:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1.5, 1.5), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_weapon"]
_data = {
&"pickup": SubResource("Animation_pickup")
}

[node name="Player" type="CharacterBody2D" unique_id=297162121]
script = ExtResource("1_ij6vw")

[node name="playeranimation" type="AnimatedSprite2D" parent="." unique_id=1297599976]
position = Vector2(3.0000007, 2)
scale = Vector2(2.1209679, 2.1209674)
sprite_frames = SubResource("SpriteFrames_t53lx")
animation = &"idle"
script = ExtResource("3_dn4c7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=772646105]
position = Vector2(1.0000005, 2.7499986)
scale = Vector2(2.1209679, 2.1209674)
shape = SubResource("RectangleShape2D_g2brh")

[node name="WeaponPivot" type="Node2D" parent="." unique_id=1937915166]

[node name="WeaponSprite" type="Sprite2D" parent="WeaponPivot" unique_id=1862105497]
visible = false
texture_filter = 1
position = Vector2(75, 0)
rotation = 1.5707964
scale = Vector2(32, 32)

[node name="WeaponAnimPlayer" type="AnimationPlayer" parent="WeaponPivot" unique_id=617057560]
libraries/weapon = SubResource("AnimationLibrary_weapon")
